# NFL-Market-Value-Analysis

./: .gitignore  .pre-commit-config.yaml  CITATION  README.md  data_structure.py  main.py  nfl_contracts.duckdb  padi.md  pyproject.toml  snap_share_aging_curve_README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  debug.yml  discussion.md  documentation_issue.md  feature.yml  feature_request.md  internal_task.md  refactor.md  task.yml  user_story.yml
.github/workflows/: issue_helper.yml  pr-dev.yml  pr-main.yml  pr-validation.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: clean_dollar_amount.sql  read_csv_pattern.sql
dbt/models/bronze/: contracts.sql  wr_game.sql  wr_season.sql
dbt/models/silver/: qb_contracts.sql
docs/: age_curve_README.md  arch.md  salary_cap_README.md
eda/: NFL_Contracts.csv  adj.py  adjusted_metric.py  wr_eda.py
src/financial_model/: qb_eda.py  test_bronze.py
src/utils/: config.py  duckdb_connector.py
tests/: test_simple.py
